configuraciones_kubernetes/nginx-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress-controller
  template:
    metadata:
      labels:
        app: nginx-ingress-controller
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: nginx/nginx-ingress:latest
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          args:
            - --ingress-class=nginx
