configuraciones_kubernetes/redirect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirect-to-8080
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: solar-app-backend  # Etiqueta de tu backend
