configuraciones_kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-app-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    app: solar-app
spec:
  ingressClassName: nginx
  rules:
  - host: app.solar.epresanjuan.gob.ar
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: solar-app-backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-app-frontend-service
            port:
              number: 80
  tls:
  - hosts:
    - app.solar.epresanjuan.gob.ar
    secretName: solar-app-tls
